k8s-security/netsec-mgmt/networkpolicy-examples/networkpolicy01.yml
# Example NetworkPolicy definition file

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  # Here we define the pods which the NetworkPolicy will apply to
  podSelector:
    matchLabels:
      role: db

  # Here we define the traffic type - Ingress, Egress, or both.
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: api
      ports:
        - protocol: TCP
          port: 5432
